--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,9 +1,18 @@
+body {
+  background-color: rgb(215, 223, 233);
+}
 .text {
   font-weight: 600;
   color: slateblue;
   text-align: center;
+  margin-bottom: 50px;
+  margin-top: 30px;
 }
 .shop-container {
   display: grid;
   grid-template-columns: 4fr 1fr;
+}
+.product-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
