--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -3,6 +3,7 @@
   height: 510px;
   border: 1px solid #95a0a7;
   border-radius: 8px;
+  margin-left: 20px;
   padding: 10px;
   margin-bottom: 30px;
   background-color: white;
@@ -21,4 +22,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 576px) {
+  .product {
+    width: 70%;
+    height: 80%;
+  }
+  .product img {
+    width: 170px;
+    height: 170px;
+  }
+  .product-info h4 {
+    font-size: 1em;
+  }
+  .product-info p {
+    font-size: small;
+  }
 }
