--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -16,3 +16,9 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+
+@media (max-width: 576px) {
+  .product-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
