--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -16,9 +16,15 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+.cart-container {
+  text-align: center;
+}
 
 @media (max-width: 576px) {
   .product-container {
     grid-template-columns: repeat(1, 1fr);
   }
+  /* .cart-container {
+    width: 100%;
+  } */
 }
